# garagemDjango

./: .isort.cfg  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_marca_nacionalidade.py  0002_veiculo_capa.py  0003_categoria.py  0003_remove_veiculo_capa_veiculo_capa.py  0004_acessorio.py  0004_remove_marca_nacionalidade_veiculo_acessorios.py  0005_cor.py  0006_veiculo.py  0007_alter_acessorio_options_alter_cor_options_and_more.py
garagem/models/: Cor.py  Marca.py  Modelo.py  Veiculo.py  __init__.py
garagem/serializers/: AcessorioSerializer.py  CategoriaSerializer.py  MarcaSerializer.py  VeiculoSerializer.py  __init__.py
garagem/views/: AcessorioViewSet.py  CategoriaViewSet.py  CorViewSet.py  VeiculoViewSet.py  __init__.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
